udev 175
========
The default 'configure' install locations have changed. Packages for systems
with the historic / vs. /usr split need to be adapted, otherwise udev will
be installed in /usr and not work properly. Example configuration options are
in INSTALL.

The default install location of the 'udevadm' tool moved from 'sbin'
to /usr/bin. Some tools expect udevadm in 'sbin'. A symlink to udevadm
needs to be manually created if needed.

Kernel modules are now loaded directly by linking udev to 'libkmod'. The
'modprobe' tool is no longer executed by udev.

The 'blkid' tool is no longer executed from udev rules. Udev links
directly to libblkid now.

Firmware is loaded natively by udev now, the external 'firmware' binary
is no longer used.

All built-in tools can be listed and tested with 'udevadm test-builtin'.

The 'udevadm control --reload-rules' option has been renamed to '--reload'.
It reloads the kernel module configuration.

The systemd socket files use PassCred=yes, which requires systemd
version 38.

The udev build system only creates a .xz tarball now.

udev 175
========
Bugfixes.

udev 174
========
Bugfixes.

The udev daemon moved to /lib/udev/udevd. Non-systemd init systems
and non-dracut initramfs image generators need to change the init
scripts. Alternatively the udev build needs to move udevd back to
/sbin or create a symlink in /sbin, which is not done by default.

The path_id, usb_id, input_id tools are built-in commands now and
the stand-alone tools do not exist anymore. Static lists of file in
initramfs generators need to be updated. For testing, the commands
can still be executed standalone with 'udevadm test-builtin <cmd>'.

The fusectl filesystem is no longer mounted directly from udev.
Systemd systems will take care of mounting fusectl and configfs
now. Non-systemd systems need to ship their own rule if they
need these filesystems auto-mounted.

The long deprecated keys: SYSFS=, ID=, BUS= have been removed.
